# FIGMA-AI-Agent

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
apps/api/: pyproject.toml
apps/api/src/api/: __init__.py  deps.py  main.py
apps/api/src/api/db/: __init__.py  models.py  session.py
apps/api/src/api/routers/: __init__.py  health.py
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
docs/architecture/: 00-overview.md  01-agent-contract.md  02-orchestration.md  03-workflow-state-machine.md  04-data-model.md  PRINCIPLES.md
docs/architecture/ADRs/: 0001-monorepo-layout.md  0002-agent-contract.md  0003-mediator-orchestration.md  0004-custom-state-machine.md  0005-async-execution.md  0006-creative-director-gate.md  0007-multi-tenancy.md  0008-figma-via-mcp.md  0009-config-pydantic.md  0010-llm-client-abstraction.md  0011-prompts-knowledge-as-config.md  0012-output-renderer-abstraction.md  0013-section-lifecycle.md  0014-agents-service-ready.md  README.md
